# parcial2-template-clion

./: CMakeLists.txt  main.cpp
ejercicios/: ejercicio1.cpp  ejercicio1.h  ejercicio2.cpp  ejercicio2.h  ejercicio3.cpp  ejercicio3.h  ejercicio4.cpp  ejercicio4.h
test/: ejercicio1TEST.cpp  ejercicio2TEST.cpp  ejercicio3TEST.cpp  ejercicio4TEST.cpp
